--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
       <li>link status</li>
       <li>link status</li>
       <li>link status</li>
+      <li>yesno</li>
+      <li>yesno</li>
+      <li>yesno</li>
+      <li>yesno</li>
+      <li>yesno</li>
     </ul>
   </body>
 </html>
